Path Policy Language